<resources>
    <string name="app_name" translatable="false">doubean</string>
    <string name="title_home">Home</string>
    <string name="title_groups">Groups</string>
    <string name="title_notifications">Notifications</string>
    <string name="follow_header">Follows</string>
    <string name="title_group">Group</string>
    <string name="title_post_detail">Post Detail</string>
    <string name="settings">Settings</string>

    <string name="search">Search</string>

    <string name="last_updated">Last updated %s</string>
    <string name="search_hint">Search groups</string>

    <string name="empty_search_result">No results for <b>%s</b></string>
    <string name="add_to_followed">Follow</string>
    <string name="followed_group">Followed group</string>
    <string name="unfollowed_group">Unfollowed group</string>

    <string name="empty_follows">No follows yet, you can search groups or browse the Groups of the Day list</string>

    <string name="followed_tab">Followed tab</string>
    <string name="unfollowed_tab">Unfollowed tab</string>

    <string name="last_updated_posts">Last updated posts</string>
    <string name="new_posts">New posts</string>
    <string name="top_posts">Top posts</string>
    <string name="new_top_posts">New top posts</string>

    <string-array name="sort_posts_by_array">
        <item>@string/last_updated_posts</item>
        <item>@string/new_posts</item>
        <item>@string/top_posts</item>
    </string-array>

    <string-array name="sort_comments_by_array">
        <item>@string/top_comments</item>
        <item>@string/all_comments</item>
    </string-array>

    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="edit_follow_preferences">Edit follow preferences</string>

    <string name="a11y_group_item_image">Avatar of group</string>
    <string name="all">All</string>

    <plurals name="comments">
        <item quantity="one">%d comment</item>
        <item quantity="other">%d comments</item>
    </plurals>
    <plurals name="reposts">
        <item quantity="one">%d repost</item>
        <item quantity="other">%d reposts</item>
    </plurals>
    <plurals name="likes">
        <item quantity="one">%d like</item>
        <item quantity="other">%d likes</item>
    </plurals>
    <plurals name="saves">
        <item quantity="one">%d save</item>
        <item quantity="other">%d saves</item>
    </plurals>
    <string name="top_comments">Top comments</string>
    <string name="all_comments">All comments</string>
    <string name="middle_dot" translatable="false">·</string>
    <string name="op">OP</string>
    <string name="retry">Retry</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="share">Share</string>
    <string name="view_in_web">View in Web</string>
    <string name="view_in">View in …</string>
    <string name="view_in_douban">View in Douban</string>
    <string name="view_in_browser">View in Browser</string>
    <string name="repliedTo">Replied to</string>
    <string name="post">Post</string>
    <string name="colon">:</string>
    <string name="groups_of_the_day_header">Groups of the Day</string>

    <!-- Preference Titles -->
    <string name="enable_notifications_title">Enable notifications</string>
    <string name="per_follow_default_notifications_preferences_settings_title">Per-follow default notifications preferences settings</string>
    <string name="enable_post_notifications_title">Enable post notifications</string>
    <string name="allow_duplicate_notifications_title">Allow duplicate notifications</string>
    <string name="sort_recommended_posts_by">Sort recommended posts by</string>
    <string name="feed_request_post_count_limit_title">Feed request post count limit</string>
    <string name="about_header">About</string>

    <!-- About Preferences -->
    <string name="app_version_title">App version</string>
    <string name="send_feedback_title">Send feedback</string>
    <string name="app_author_title">App author</string>
    <string name="app_author" translatable="false">Bumblebee202111</string>

    <!-- Notifications -->
    <string name="group_notifications_header">Group Notifications</string>
    <string name="post_notification_channel_name">Recommended posts</string>
    <string name="post_notification_channel_description">The latest updates on your following group posts and tabs</string>
    <string name="post_notification_group_summary">%1$d recommend posts</string>

    <!-- Dialogs -->
    <string name="group_notifications_preference">Group notifications preference</string>
    <string name="tab_notifications_preference">Tab notifications preference</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <!-- Settings -->
    <string name="last_updated_value" translatable="false">lastUpdatedValue</string>
    <string name="new_top_value" translatable="false">newTopValue</string>

    <string-array name="sort_recommended_posts_by_array">
        <item>@string/last_updated_posts</item>
        <item>@string/new_top_posts</item>
    </string-array>

    <string-array name="sort_recommended_posts_by_entry_values">
        <item>@string/last_updated_value</item>
        <item>@string/new_top_value</item>
    </string-array>

</resources>