<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_groups_graph">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.doubean.ford.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.doubean.ford.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <navigation
        android:id="@+id/navigation_groups_graph"
        app:startDestination="@id/navigation_groups">
        <fragment
            android:id="@+id/navigation_groups"
            android:name="com.doubean.ford.ui.groups.GroupsFragment"
            android:label="@string/title_groups"
            tools:layout="@layout/fragment_groups">
            <action
                android:id="@+id/action_navigation_groups_to_navigation_group_detail"
                app:destination="@id/navigation_group_detail" />
            <action
                android:id="@+id/action_navigation_groups_to_navigation_group_search"
                app:destination="@id/navigation_group_search" />
            <deepLink app:uri="https://m.douban.com/group" />
            <deepLink app:uri="https://www.douban.com/group/explore" />
        </fragment>
        <fragment
            android:id="@+id/navigation_group_detail"
            android:name="com.doubean.ford.ui.groupDetail.GroupDetailFragment"
            android:label="@string/title_group"
            tools:layout="@layout/fragment_group_detail">
            <argument
                android:name="groupId"
                app:argType="string" />
            <argument
                android:name="defaultTabId"
                android:defaultValue="@null"
                app:argType="string"
                app:nullable="true" />
            <action
                android:id="@+id/action_navigation_group_detail_to_navigation_group_topic_detail"
                app:destination="@id/navigation_group_topic_detail" />
            <deepLink app:uri="https://m.douban.com/group/{groupId}/" />
            <deepLink app:uri="https://www.douban.com/group/{groupId}/" />
        </fragment>
        <fragment
            android:id="@+id/navigation_group_search"
            android:name="com.doubean.ford.ui.groupSearch.GroupSearchFragment">

            <action
                android:id="@+id/action_navigation_group_search_to_navigation_group_detail"
                app:destination="@id/navigation_group_detail" />
        </fragment>
        <fragment
            android:id="@+id/navigation_group_tab"
            android:name="com.doubean.ford.ui.groupTab.GroupTabFragment">
            <argument
                android:name="tagId"
                app:argType="string" />
        </fragment>
        <fragment
            android:id="@+id/navigation_group_topic_detail"
            android:name="com.doubean.ford.ui.groupTopic.GroupTopicFragment"
            android:label="@string/title_group_topic"
            tools:layout="@layout/fragment_group_detail">
            <argument
                android:name="topicId"
                app:argType="string" />
        </fragment>
    </navigation>

</navigation>