<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="groupTabviewModel"
            type="com.doubean.ford.ui.groups.groupTab.GroupTabViewModel" />

        <variable
            name="groupDetailViewModel"
            type="com.doubean.ford.ui.groups.groupDetail.GroupDetailViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="?dialogPreferredPadding">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/enable_post_notifications_pref"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_post_notifications_title" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/allow_duplicate_notifications_pref"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/allow_duplicate_notifications_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sort_recommended_posts_by_pref"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/sort_recommended_posts_by_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sort_recommended_posts_by"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/sort_recommended_posts_by_spinner"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/sort_recommended_posts_by_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/feed_request_post_count_limit_pref"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/feed_request_post_count_limit_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/feed_request_post_count_limit_title"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/feed_request_post_count_limit_edit_text"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/feed_request_post_count_limit_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:minWidth="@dimen/min_touch_target"
                android:minHeight="@dimen/min_touch_target"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>